Criando Random Forest

--- a/final_model.ipynb
+++ b/final_model.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from classic_patterns import ml_tsla_data\n",
+    "from classic_patterns import classic_ml_data\n",
     "from labeling import label_tsla_data"
    ]
   },
@@ -25,12 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ml_tsla_data = np.array(ml_tsla_data)  \n",
-    "label_tsla_data = np.array(label_tsla_data).ravel()  \n",
+    "# Convertendo para numpy arrays, caso ainda não estejam\n",
+    "ml_tsla_data = np.array(classic_ml_data)  \n",
+    "label_tsla_data = np.array(label_tsla_data).ravel()\n",
     "\n",
     "# Divide os dados em conjuntos de treinamento e teste\n",
     "X_train, X_test, y_train, y_test = train_test_split(ml_tsla_data, label_tsla_data, test_size=0.2, random_state=42)"
@@ -40,77 +42,144 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fazendo a rede neural"
+    "## Fazendo a Rede Neural"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define the neural network with multiple layers\n",
-    "# Adjust the hidden_layer_sizes parameter for more layers and units\n",
-    "mlp = MLPClassifier(hidden_layer_sizes=(100, 100, 100), activation='logistic', solver='adam', max_iter=500, random_state=42)\n",
-    "\n",
-    "# Train the neural network\n",
-    "mlp.fit(X_train, y_train)\n",
-    "\n",
-    "# Make predictions\n",
-    "y_pred_probs = mlp.predict_proba(X_test)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "boolean index did not match indexed array along dimension 0; dimension is 713 but corresponding boolean dimension is 3",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[30], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43my_pred_probs\u001b[49m\u001b[43m[\u001b[49m\u001b[43my_pred_probs\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m]\u001b[49m\n",
-      "\u001b[1;31mIndexError\u001b[0m: boolean index did not match indexed array along dimension 0; dimension is 713 but corresponding boolean dimension is 3"
-     ]
-    }
-   ],
-   "source": [
-    "y_pred_probs[y_pred_probs[:][3] > 0.5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(713, 3)\n",
-      "[[0.00664148 0.47996191 0.51339661]\n",
-      " [0.00685358 0.48211    0.51103642]\n",
-      " [0.00686925 0.4822323  0.51089845]\n",
-      " ...\n",
-      " [0.00686925 0.4822323  0.51089845]\n",
-      " [0.00668008 0.48050195 0.51281797]\n",
-      " [0.00669415 0.48061367 0.51269218]]\n"
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        -1.0       0.00      0.00      0.00         9\n",
+      "         0.0       0.00      0.00      0.00       357\n",
+      "         1.0       0.49      1.00      0.65       347\n",
+      "\n",
+      "    accuracy                           0.49       713\n",
+      "   macro avg       0.16      0.33      0.22       713\n",
+      "weighted avg       0.24      0.49      0.32       713\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Léo\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\Léo\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\Léo\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
      ]
     }
    ],
    "source": [
-    "print(y_pred_probs.shape)\n",
-    "print(y_pred_probs)\n",
-    "# print(classification_report(y_test, y_pred_probs, target_names=[\"Desfazer Posição\", \"Compra\", \"Short\"]))\n",
-    "\n"
+    "# Define a rede neural com múltiplas camadas\n",
+    "mlp = MLPClassifier(hidden_layer_sizes=(100, 100, 100), activation='logistic', solver='adam', max_iter=500, random_state=42)\n",
+    "\n",
+    "# Treina a rede neural\n",
+    "mlp.fit(X_train, y_train)\n",
+    "\n",
+    "# Faz previsões de probabilidade com o modelo MLP\n",
+    "y_pred_probs_mlp = mlp.predict_proba(X_test)\n",
+    "\n",
+    "# Converte as probabilidades em previsões de classe\n",
+    "y_pred = mlp.predict(X_test)\n",
+    "\n",
+    "# Exibe o relatório de classificação para o MLP\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fazendo o Modelo Random Forest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        -1.0       0.00      0.00      0.00         9\n",
+      "         0.0       0.47      0.10      0.17       357\n",
+      "         1.0       0.48      0.88      0.63       347\n",
+      "\n",
+      "    accuracy                           0.48       713\n",
+      "   macro avg       0.32      0.33      0.27       713\n",
+      "weighted avg       0.47      0.48      0.39       713\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Léo\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\Léo\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\Léo\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define o modelo Random Forest\n",
+    "rf = RandomForestClassifier(n_estimators=100, max_depth=10, random_state=42)\n",
+    "\n",
+    "# Treina o modelo Random Forest\n",
+    "rf.fit(X_train, y_train)\n",
+    "\n",
+    "# Faz previsões de probabilidade\n",
+    "y_pred_probs = rf.predict_proba(X_test)\n",
+    "\n",
+    "# Converte as probabilidades em previsões de classe\n",
+    "y_pred = rf.predict(X_test)\n",
+    "\n",
+    "# Exibe o relatório de classificação para o MLP\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2.52374159e-03 1.96985076e-01 8.00491182e-01]\n",
+      " [1.19982149e-02 4.84471646e-01 5.03530139e-01]\n",
+      " [1.41937404e-03 4.40327581e-01 5.58253045e-01]\n",
+      " ...\n",
+      " [1.41937404e-03 4.40327581e-01 5.58253045e-01]\n",
+      " [7.99688317e-04 4.84704645e-01 5.14495666e-01]\n",
+      " [4.63652258e-03 4.78172482e-01 5.17190995e-01]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y_pred_probs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -119,13 +188,13 @@
      "text": [
       "                  precision    recall  f1-score   support\n",
       "\n",
-      "Desfazer Posição       0.01      1.00      0.02         9\n",
+      "Desfazer Posição       0.01      0.78      0.02         9\n",
       "          Compra       0.00      0.00      0.00       357\n",
-      "           Short       0.00      0.00      0.00       347\n",
+      "           Short       0.51      0.12      0.19       347\n",
       "\n",
-      "        accuracy                           0.01       713\n",
-      "       macro avg       0.00      0.33      0.01       713\n",
-      "    weighted avg       0.00      0.01      0.00       713\n",
+      "        accuracy                           0.07       713\n",
+      "       macro avg       0.17      0.30      0.07       713\n",
+      "    weighted avg       0.25      0.07      0.09       713\n",
       "\n"
      ]
     },
@@ -133,30 +202,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kauan\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "c:\\Users\\Léo\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "C:\\Users\\kauan\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "c:\\Users\\Léo\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "C:\\Users\\kauan\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "c:\\Users\\Léo\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
      ]
     }
    ],
    "source": [
-    "# Previsão das probabilidades\n",
-    "y_pred_probs = mlp.predict_proba(X_test)\n",
+    "# Faz previsões de probabilidade\n",
+    "y_pred_probs = rf.predict_proba(X_test)\n",
     "\n",
-    "# Mapeia as classes para 0, 1 e -1\n",
-    "# Considerando que a classe 0 corresponde a 'Desfazer Posição', 1 a 'Compra' e 2 a 'Short'\n",
-    "# Vamos usar np.argmax para encontrar a classe com maior probabilidade\n",
+    "# Identifica a classe com maior probabilidade\n",
     "y_pred_indices = np.argmax(y_pred_probs, axis=1)\n",
     "\n",
-    "# Mapeando os índices para -1, 0 e 1\n",
-    "# Supondo que:\n",
-    "# Classe 0 -> 0 (Desfazer Posição)\n",
-    "# Classe 1 -> 1 (Compra)\n",
-    "# Classe 2 -> -1 (Short)\n",
-    "class_mapping = {0: 0, 1: 1, 2: -1}\n",
+    "# Mapeia os índices para as classes de interesse\n",
+    "class_mapping = {0: 0, 1: 1, 2: -1}  # ajuste conforme necessário para sua classificação\n",
     "y_pred = np.vectorize(class_mapping.get)(y_pred_indices)\n",
     "\n",
     "# Avalia o modelo\n",
@@ -180,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
