Adicionando Modelo Gradient Boosting

--- a/final_model.ipynb
+++ b/final_model.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
     "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -89,11 +90,11 @@
     "# Faz previsões de probabilidade com o modelo MLP\n",
     "y_pred_probs_mlp = mlp.predict_proba(X_test)\n",
     "\n",
-    "# Converte as probabilidades em previsões de classe\n",
-    "y_pred = mlp.predict(X_test)\n",
+    "# Faz previsões de classe\n",
+    "y_pred_mlp = mlp.predict(X_test)\n",
     "\n",
     "# Exibe o relatório de classificação para o MLP\n",
-    "print(classification_report(y_test, y_pred))"
+    "print(classification_report(y_test, y_pred_mlp))"
    ]
   },
   {
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -147,11 +148,69 @@
     "# Faz previsões de probabilidade\n",
     "y_pred_probs = rf.predict_proba(X_test)\n",
     "\n",
-    "# Converte as probabilidades em previsões de classe\n",
-    "y_pred = rf.predict(X_test)\n",
+    "# Faz previsões de classe\n",
+    "y_pred_rf = rf.predict(X_test)\n",
     "\n",
     "# Exibe o relatório de classificação para o MLP\n",
-    "print(classification_report(y_test, y_pred))"
+    "print(classification_report(y_test, y_pred_rf))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fazendo o Modelo Gradient Boosting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        -1.0       0.00      0.00      0.00         9\n",
+      "         0.0       0.45      0.07      0.12       357\n",
+      "         1.0       0.48      0.92      0.63       347\n",
+      "\n",
+      "    accuracy                           0.48       713\n",
+      "   macro avg       0.31      0.33      0.25       713\n",
+      "weighted avg       0.46      0.48      0.37       713\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Léo\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\Léo\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\Léo\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define o modelo Gradient Boosting\n",
+    "gb_model = GradientBoostingClassifier(random_state=42)\n",
+    "\n",
+    "# Treina o modelo Gradient Boosting\n",
+    "gb_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Faz previsões de probabilidade\n",
+    "y_pred_probs = gb_model.predict_proba(X_test)\n",
+    "\n",
+    "# Faz previsões de classe\n",
+    "y_pred_gb = gb_model.predict(X_test)\n",
+    "\n",
+    "# Exibe o relatório de classificação para o modelo Gradient Boosting\n",
+    "print(classification_report(y_test, y_pred_gb))"
    ]
   },
   {
