Fazendo funções para os modelos

--- a/final_model.ipynb
+++ b/final_model.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -81,20 +81,48 @@
     }
    ],
    "source": [
-    "# Define a rede neural com múltiplas camadas\n",
-    "mlp = MLPClassifier(hidden_layer_sizes=(100, 100, 100), activation='logistic', solver='adam', max_iter=500, random_state=42)\n",
+    "def mlp(X_train, y_train, X_test, y_test, hidden_layers=(100, 100, 100), \n",
+    "              activation='logistic', solver='adam', max_iter=500, random_state=42):\n",
+    "    \"\"\"\n",
+    "    Treina um modelo de rede neural MLP e retorna as previsões e o relatório de classificação.\n",
     "\n",
-    "# Treina a rede neural\n",
-    "mlp.fit(X_train, y_train)\n",
+    "    Parâmetros:\n",
+    "    - X_train: Features do conjunto de treinamento.\n",
+    "    - y_train: Rótulos do conjunto de treinamento.\n",
+    "    - X_test: Features do conjunto de teste.\n",
+    "    - y_test: Rótulos do conjunto de teste.\n",
+    "    - hidden_layers: Tupla com o tamanho das camadas ocultas.\n",
+    "    - activation: Função de ativação a ser usada.\n",
+    "    - solver: Algoritmo de otimização a ser usado.\n",
+    "    - max_iter: Número máximo de iterações.\n",
+    "    - random_state: Semente para a geração de números aleatórios.\n",
     "\n",
-    "# Faz previsões de probabilidade com o modelo MLP\n",
-    "y_pred_probs_mlp = mlp.predict_proba(X_test)\n",
+    "    Retorna:\n",
+    "    - y_pred_mlp: Previsões das classes no conjunto de teste.\n",
+    "    - report: Relatório de classificação.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Define a rede neural com múltiplas camadas\n",
+    "    mlp = MLPClassifier(hidden_layer_sizes=hidden_layers, activation=activation,\n",
+    "                        solver=solver, max_iter=max_iter, random_state=random_state)\n",
     "\n",
-    "# Faz previsões de classe\n",
-    "y_pred_mlp = mlp.predict(X_test)\n",
+    "    # Treina a rede neural\n",
+    "    mlp.fit(X_train, y_train)\n",
     "\n",
-    "# Exibe o relatório de classificação para o MLP\n",
-    "print(classification_report(y_test, y_pred_mlp))"
+    "    # Faz previsões de probabilidade com o modelo MLP\n",
+    "    y_pred_probs_mlp = mlp.predict_proba(X_test)\n",
+    "\n",
+    "    # Faz previsões de classe\n",
+    "    y_pred_mlp = mlp.predict(X_test)\n",
+    "\n",
+    "    # Exibe o relatório de classificação para o MLP\n",
+    "    report = classification_report(y_test, y_pred_mlp)\n",
+    "    print(report)\n",
+    "\n",
+    "    return y_pred_mlp, report\n",
+    "\n",
+    "# Exemplo de uso\n",
+    "y_pred_mlp, report = mlp(X_train, y_train, X_test, y_test)"
    ]
   },
   {
@@ -106,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -139,20 +167,46 @@
     }
    ],
    "source": [
-    "# Define o modelo Random Forest\n",
-    "rf = RandomForestClassifier(n_estimators=100, max_depth=10, random_state=42)\n",
+    "def random_forest(X_train, y_train, X_test, y_test, n_estimators=100, \n",
+    "                        max_depth=10, random_state=42):\n",
+    "    \"\"\"\n",
+    "    Treina um modelo de Random Forest e retorna as previsões e o relatório de classificação.\n",
     "\n",
-    "# Treina o modelo Random Forest\n",
-    "rf.fit(X_train, y_train)\n",
+    "    Parâmetros:\n",
+    "    - X_train: Features do conjunto de treinamento.\n",
+    "    - y_train: Rótulos do conjunto de treinamento.\n",
+    "    - X_test: Features do conjunto de teste.\n",
+    "    - y_test: Rótulos do conjunto de teste.\n",
+    "    - n_estimators: Número de árvores na floresta.\n",
+    "    - max_depth: Profundidade máxima das árvores.\n",
+    "    - random_state: Semente para a geração de números aleatórios.\n",
     "\n",
-    "# Faz previsões de probabilidade\n",
-    "y_pred_probs = rf.predict_proba(X_test)\n",
+    "    Retorna:\n",
+    "    - y_pred_rf: Previsões das classes no conjunto de teste.\n",
+    "    - report: Relatório de classificação.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Define o modelo Random Forest\n",
+    "    rf = RandomForestClassifier(n_estimators=n_estimators, max_depth=max_depth, \n",
+    "                                 random_state=random_state)\n",
     "\n",
-    "# Faz previsões de classe\n",
-    "y_pred_rf = rf.predict(X_test)\n",
+    "    # Treina o modelo Random Forest\n",
+    "    rf.fit(X_train, y_train)\n",
     "\n",
-    "# Exibe o relatório de classificação para o MLP\n",
-    "print(classification_report(y_test, y_pred_rf))"
+    "    # Faz previsões de probabilidade\n",
+    "    y_pred_probs = rf.predict_proba(X_test)\n",
+    "\n",
+    "    # Faz previsões de classe\n",
+    "    y_pred_rf = rf.predict(X_test)\n",
+    "\n",
+    "    # Exibe o relatório de classificação para o Random Forest\n",
+    "    report = classification_report(y_test, y_pred_rf)\n",
+    "    print(report)\n",
+    "\n",
+    "    return y_pred_rf, report\n",
+    "\n",
+    "# Exemplo de uso\n",
+    "y_pred_rf, report = random_forest(X_train, y_train, X_test, y_test)"
    ]
   },
   {
@@ -164,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -197,20 +251,42 @@
     }
    ],
    "source": [
-    "# Define o modelo Gradient Boosting\n",
-    "gb_model = GradientBoostingClassifier(random_state=42)\n",
+    "def gradient_boosting(X_train, y_train, X_test, y_test, random_state=42):\n",
+    "    \"\"\"\n",
+    "    Treina um modelo de Gradient Boosting e retorna as previsões e o relatório de classificação.\n",
     "\n",
-    "# Treina o modelo Gradient Boosting\n",
-    "gb_model.fit(X_train, y_train)\n",
+    "    Parâmetros:\n",
+    "    - X_train: Features do conjunto de treinamento.\n",
+    "    - y_train: Rótulos do conjunto de treinamento.\n",
+    "    - X_test: Features do conjunto de teste.\n",
+    "    - y_test: Rótulos do conjunto de teste.\n",
+    "    - random_state: Semente para a geração de números aleatórios.\n",
     "\n",
-    "# Faz previsões de probabilidade\n",
-    "y_pred_probs = gb_model.predict_proba(X_test)\n",
+    "    Retorna:\n",
+    "    - y_pred_gb: Previsões das classes no conjunto de teste.\n",
+    "    - report: Relatório de classificação.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Define o modelo Gradient Boosting\n",
+    "    gb_model = GradientBoostingClassifier(random_state=random_state)\n",
     "\n",
-    "# Faz previsões de classe\n",
-    "y_pred_gb = gb_model.predict(X_test)\n",
+    "    # Treina o modelo Gradient Boosting\n",
+    "    gb_model.fit(X_train, y_train)\n",
     "\n",
-    "# Exibe o relatório de classificação para o modelo Gradient Boosting\n",
-    "print(classification_report(y_test, y_pred_gb))"
+    "    # Faz previsões de probabilidade\n",
+    "    y_pred_probs = gb_model.predict_proba(X_test)\n",
+    "\n",
+    "    # Faz previsões de classe\n",
+    "    y_pred_gb = gb_model.predict(X_test)\n",
+    "\n",
+    "    # Exibe o relatório de classificação para o Gradient Boosting\n",
+    "    report = classification_report(y_test, y_pred_gb)\n",
+    "    print(report)\n",
+    "\n",
+    "    return y_pred_gb, report\n",
+    "\n",
+    "# Exemplo de uso\n",
+    "y_pred_gb, report = gradient_boosting(X_train, y_train, X_test, y_test)"
    ]
   },
   {
