--- a/final_model.ipynb
+++ b/final_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,16 @@
     "from sklearn.metrics import classification_report\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from classic_patterns import classic_ml_data\n",
-    "from labeling import label_tsla_data"
+    "from classic_patterns import classic_ml_data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import labeling as lb"
    ]
   },
   {
@@ -29,11 +37,23 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'labeling' has no attribute 'label_tsla_data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Convertendo para numpy arrays, caso ainda não estejam\u001b[39;00m\n\u001b[0;32m      2\u001b[0m ml_tsla_data \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(classic_ml_data)  \n\u001b[1;32m----> 3\u001b[0m label_tsla_data \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(\u001b[43mlb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlabel_tsla_data\u001b[49m)\u001b[38;5;241m.\u001b[39mravel()\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Divide os dados em conjuntos de treinamento e teste\u001b[39;00m\n\u001b[0;32m      6\u001b[0m X_train, X_test, y_train, y_test \u001b[38;5;241m=\u001b[39m train_test_split(ml_tsla_data, label_tsla_data, test_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.2\u001b[39m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'labeling' has no attribute 'label_tsla_data'"
+     ]
+    }
+   ],
    "source": [
     "# Convertendo para numpy arrays, caso ainda não estejam\n",
     "ml_tsla_data = np.array(classic_ml_data)  \n",
-    "label_tsla_data = np.array(label_tsla_data).ravel()\n",
+    "label_tsla_data = np.array(lb.label_tsla_data).ravel()\n",
     "\n",
     "# Divide os dados em conjuntos de treinamento e teste\n",
     "X_train, X_test, y_train, y_test = train_test_split(ml_tsla_data, label_tsla_data, test_size=0.2, random_state=42)"
@@ -302,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
